--- a/main.css
+++ b/main.css
@@ -107,7 +107,169 @@ body {
 }
 
 /***************ABOUT**********************/
-
+a {
+    text-decoration: none;
+    transition: all 0.5s ease-in-out;
+}
+  
+a:hover {
+    transition: all 0.5s ease-in-out;
+}
+  
+.about-us-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    width: 100%;
+}
+  
+#about-us-section {
+    background: #000000;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding-bottom: 0px;
+}
+  
+@media screen and (max-width: 860px) {
+    #about-us-section {
+      flex-direction: column;
+      justify-content: space-between;
+    }
+}
+  
+.about-us-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    overflow: hidden;
+}
+  
+@media screen and (max-width: 860px) {
+    .about-us-image {
+      position: relative;
+      width: 100%;
+      height: 45%;
+    }
+}
+  
+@media screen and (max-width: 747px) {
+    .about-us-image {
+      height: 35%;
+    }
+}
+  
+@media screen and (max-width: 644px) {
+    .about-us-image img {
+      position: absolute;
+      left: -220px;
+    }
+}
+  
+.about-us-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    width: 40%;
+    height: 80%;
+    margin-right: 850px;
+    margin-left: 12px;
+    z-index: 2;
+}
+  
+@media screen and (max-width: 1353px) {
+    .about-us-info {
+      margin-right: 400px;
+      width: 60%;
+      background: #00000099;
+      padding: 0px 25px 0px 0px;
+    }
+}
+  
+@media screen and (max-width: 1238px) {
+    .about-us-info {
+      margin-right: 340px;
+      width: 100%;
+    }
+}
+  
+@media screen and (max-width: 1111px) {
+    .about-us-info {
+      margin-right: 270px;
+    }
+}
+  
+@media screen and (max-width: 910px) {
+    .about-us-info {
+      margin-right: 150px;
+    }
+}
+  
+@media screen and (max-width: 860px) {
+    .about-us-info {
+      margin: 0px 0px 0px 0px !important;
+      padding: 0px 20px 0px 20px !important;
+      width: 100%;
+      height: 55%;
+      align-items: center;
+    }
+}
+  
+@media screen and (max-width: 747px) {
+    .about-us-info {
+      height: 65%;
+    }
+}
+  
+.about-us-info h2 {
+    color: white;
+    font-size: 40pt;
+    text-align: right;
+}
+  
+@media screen and (max-width: 860px) {
+    .about-us-info h2 {
+      text-align: center;
+    }
+}
+  
+.about-us-info p {
+    color: white;
+    font-size: 14pt;
+    text-align: right;
+}
+  
+@media screen and (max-width: 860px) {
+    .about-us-info p {
+      text-align: center;
+    }
+}
+  
+.about-us-info a {
+    background-color: white;
+    color: #000000;
+    width: 180px;
+    text-align: center;
+    padding: 15px 0px 15px 0px;
+    font-size: 14pt;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+  
+.about-us-info a:hover {
+    background: #404140;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    transform: translateY(10px);
+}
 
 /***************FOOTER**********************/
 .footer {
