--- a/User/main.css
+++ b/User/main.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -107,12 +111,12 @@ body {
 }
 
 /***************ABOUT**********************/
-a {
+.about-us-block a {
     text-decoration: none;
     transition: all 0.5s ease-in-out;
 }
   
-a:hover {
+.about-us-block a:hover {
     transition: all 0.5s ease-in-out;
 }
   
@@ -123,6 +127,7 @@ a:hover {
     justify-content: center;
     flex-wrap: nowrap;
     width: 100%;
+    padding-top: 20px;
 }
   
 #about-us-section {
@@ -269,6 +274,73 @@ a:hover {
     color: white;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     transform: translateY(10px);
+}
+
+/***************BOOKING**********************/
+.bookingParent{
+    background-color: #f5f5f5;
+}
+
+.bookingParent h1{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 0px;
+}
+
+.booking{
+    width: 500px;
+    margin: 0px auto;
+    padding: 20px 50px 50px 50px;
+}
+
+div.elem-group {
+    margin: 20px 0;
+}
+  
+div.elem-group.inlined {
+    width: 49%;
+    float: left;
+    margin-left: 1%;
+}
+  
+label {
+    display: block;
+    padding-bottom: 10px;
+    font-size: 1em;
+}
+  
+input, select, textarea {
+    border-radius: 2px;
+    border: 2px solid #777;
+    box-sizing: border-box;
+    font-size: 1em;
+    width: 100%;
+    padding: 10px;
+}
+  
+div.elem-group.inlined input {
+    width: 95%;
+    display: inline-block;
+}
+  
+hr {
+    border: 1px dotted #ccc;
+}
+  
+.BookingConfirm {
+    height: 50px;
+    background: orange;
+    border: none;
+    color: white;
+    font-size: 1.25em;
+    font-family: 'Nanum Gothic';
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+  
+.BookingConfirm:hover {
+    border: 2px solid black;
 }
 
 /***************FOOTER**********************/
