--- a/Dashboard/Dashboard.css
+++ b/Dashboard/Dashboard.css
@@ -5,7 +5,7 @@ body{
 }
 
 /***************HEADER**********************/
-.header {
+.topnav {
     width: 100%;
     bottom: 0;
     left: 0;
@@ -15,28 +15,70 @@ body{
     height: 50px;
     z-index: 100;
 }
-  
-.header h1{
-    text-align: left;
-    padding-top: 15px;
-    color: white;
+
+.topnav p{
     margin-top: 0px;
-    font-size: 1rem;
-    padding-left: 15px;
     text-transform: uppercase;
 }
+  
+.topnav a, p {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+  
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+  
+.topnav a.active {
+    background-color: #ddd;
+    color: black;
+}
+  
+.topnav .icon {
+    display: none;
+}
+  
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+}
+  
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+}
 
-.header button{
+.topnav button{
     float: right;
     text-align: center;
     color: rgb(0, 0, 0);
     padding: 10px;
-    margin-top: -40px;
+    margin-top: 5px;
     position: relative;
     border-radius: 20px;
 }
 
-.header button:hover{
+.topnav button:hover{
     border-radius: 10px;
 }
 
@@ -113,6 +155,27 @@ body{
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-transform: uppercase;
+}
+
+.btnTable {
+    border:none;
+    padding: 10px 15px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 10px;
+    width: 145px;
+    height: 45px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+    margin: 0px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.btnTable-confirm{
+    color: rgb(255, 0, 0);
+}
+
+.btnTable:hover{
+    font-size: 20px;
 }
 
 /***************FOOTER**********************/
@@ -193,4 +256,76 @@ body{
 
 .btn-confirm{
     color: rgb(255, 0, 0);
+}
+
+.modal-content p{
+    color: rgba(0, 0, 0, 1);
+    align-items: center;
+}
+
+/***************BOOKING**********************/
+.bookingParent{
+    background-color: #f5f5f5;
+}
+
+.bookingParent h1{
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 0px;
+}
+
+.booking{
+    width: 500px;
+    margin: 0px auto;
+    padding: 20px 50px 50px 50px;
+}
+
+div.elem-group {
+    margin: 20px 0;
+}
+  
+div.elem-group.inlined {
+    width: 49%;
+    float: left;
+    margin-left: 1%;
+}
+  
+label {
+    display: block;
+    padding-bottom: 10px;
+    font-size: 1em;
+}
+  
+input, select, textarea {
+    border-radius: 2px;
+    border: 2px solid #777;
+    box-sizing: border-box;
+    font-size: 1em;
+    width: 100%;
+    padding: 10px;
+}
+  
+div.elem-group.inlined input {
+    width: 95%;
+    display: inline-block;
+}
+  
+hr {
+    border: 1px dotted #ccc;
+}
+  
+.BookingConfirm {
+    height: 50px;
+    background: orange;
+    border: none;
+    color: white;
+    font-size: 1.25em;
+    font-family: 'Nanum Gothic';
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+  
+.BookingConfirm:hover {
+    border: 2px solid black;
 }
